# slisic

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.json  bun.lockb  fsm-analysis.md  fsm-refactor-blueprint.md  package.json  rsbuild.config.ts  tsconfig.json
.github/workflows/: release.yml
components/: comp-01.tsx
components/ui/: button.tsx  command.tsx  context-menu.tsx  datefield-rac.tsx  input.tsx
docs/: module-algebra-migration.md  paste-import-behavior.md  project-behavior.design.md  remote-connection-code-ownership-architecture.md  remote-p2p-buffered-hls-architecture.md  remote-playback-liveness-proof.md  remote-share-hls-architecture.md  remote-share-webrtc-architecture.md
docs/blog/: playlist-local-attractors.md
lib/: result.ts  utils.ts
scratch/experiments/: hteb_audio_robustness.py  hteb_audio_robustness.random.result.json  hteb_audio_robustness.result.json
scripts/: generate-macos-icon.mjs
scripts/experiments/: audio_style_candidate_field_balance.py  audio_style_candidate_pool_balance.py  audio_style_candidate_pool_stability.py  audio_style_manifold_flow_experiment.py  audio_style_neighbor_basin_balance.py  audio_style_route_field_hypothesis_experiment.py  audio_style_style_inertia_experiment.py  distributed_attractor_walk.py  playback_loudness_static_gain_experiment.py
src/: App.css  App.test.tsx  App.tsx  env.d.ts  fonts.css  index.tsx  remoteShareCodeFeedback.test.ts  remoteShareCodeFeedback.ts  topbar.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/appdb/src/: error.rs  lib.rs
src-tauri/crates/appdb/src/auth/: mod.rs
src-tauri/crates/appdb/src/connection/: mod.rs
src-tauri/crates/appdb/src/database/: mod.rs
src-tauri/crates/appdb/src/graph/: mod.rs
src-tauri/crates/appdb/src/model/: meta.rs  mod.rs  relation.rs  schema.rs
src-tauri/crates/appdb/src/query/: builder.rs  mod.rs  sql.rs
src-tauri/crates/appdb/src/repository/: mod.rs
src-tauri/crates/appdb/src/serde_utils/: id.rs
src-tauri/crates/appdb/src/tx/: mod.rs
src-tauri/crates/appdb/tests/: integration_db.rs
src-tauri/crates/audio-playback/: Cargo.toml  README.md
src-tauri/crates/audio-playback/src/: lib.rs
src-tauri/examples/: manual_download_chain.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  domain_tests.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/database/: crud.rs
src-tauri/src/database/enums/: table.rs
src-tauri/src/domain/: audio_tail_trim.rs  audio_tail_trim.test.rs  collection_import.rs  collection_import.test.rs  loudness_evidence.rs  loudness_evidence.test.rs  mod.rs  relations.rs  remote_hls_prime_0.ts  remote_hls_prime_1.ts  remote_hls_prime_1s.ts  remote_hls_prime_2.ts  remote_hls_prime_3.ts  remote_hls_prime_4.ts  remote_hls_prime_5.ts  remote_host_identity.rs  remote_host_identity.test.rs  remote_p2p_hls.rs  remote_p2p_hls.test.rs  remote_p2p_transport.rs  remote_p2p_transport.test.rs  remote_share.rs  remote_share.test.rs  remote_webrtc_audio.rs  remote_webrtc_audio.test.rs  template.rs
src-tauri/src/domain/downloads/: cmd.rs  download-behavior.design.md  mod.rs  model.rs  model.test.rs  naming.rs  planning.rs  repo.rs  repo.test.rs  service.rs  service.test.rs  yt_dlp.rs  yt_dlp.test.rs
src-tauri/src/domain/meta/: cmd.rs  mod.rs  model.rs  repo.rs  repo.test.rs  service.rs
src-tauri/src/domain/models/: member.rs  mod.rs  music.rs  task.rs  user.rs
src-tauri/src/domain/music/: api.rs  db_schema.rs  mod.rs  normalization.rs  repo.rs  service.rs  store.rs  store_surreal.rs  types.rs
src-tauri/src/domain/player/: cmd.rs  event.rs  mod.rs  model.rs  service.rs  service.test.rs  strategy.rs  strategy.test.rs  track_identity_substitution.rs  track_identity_substitution.test.rs  waveform.rs  waveform.test.rs
src-tauri/src/domain/playlist_playback/: cmd.rs  mod.rs  model.rs  playable_index.rs  playable_index.test.rs  playback-selection.design.md  recommendation.rs  recommendation.test.rs  service.rs  service.test.rs
src-tauri/src/domain/playlists/: cmd.rs  cmd.test.rs  mod.rs  model.rs  model.test.rs  repo.rs  repo.test.rs  startup_bootstrap.rs  startup_bootstrap.test.rs
src-tauri/src/utils/: audio.rs  binaries.rs  binaries.test.rs  config.rs  core.rs  core.test.rs  enq.rs  ffmpeg.rs  file.rs  hardware_wheel.rs  mod.rs  window.rs  ytdlp.rs
src-tauri/src/utils/hardware_wheel/: hardware_wheel_dedupe.rs  hardware_wheel_hid.rs
src-tauri/tests/: binaries_test.rs  domain_persistence_test.rs  download_recovery_test.rs  hardware_wheel_test.rs  manual_download_chain_test.rs  manual_playlist_debug_test.rs
src/assets/: icons.tsx
src/bootstrap/: appEntryMachine.test.ts  appEntryMachine.ts  index.ts  logic.test.ts  logic.ts
src/cmd/: commandAdapter.test.ts  commandAdapter.ts  commands.ts
src/components/: ArcTrackList.test.ts  ArcTrackList.tsx  EditableTitle.test.ts  EditableTitle.tsx  HoloButton.tsx  ListConfig.back-action-icon.tsx  ListConfig.back-action.test.ts  ListConfig.back-action.ts  ListConfig.ghost-dom.test.ts  ListConfig.ghost-dom.ts  ListConfig.ghost-geometry.test.ts  ListConfig.ghost-geometry.ts  ListConfig.ghost-motion.test.ts  ListConfig.ghost-motion.ts  ListConfig.ghost-trace.ts  ListConfig.ghost-transition.test.ts  ListConfig.ghost-transition.ts  ListConfig.test.ts  ListConfig.tsx  ListConfig.view-model.ts  PlayListPage.test.ts  PlayListPage.tsx  PlayListPage.view-model.ts  PlayListPageItem.motion.ts  PlayListPageItem.test.ts  PlayListPageItem.tsx  SpectrumPage.test.ts  SpectrumPage.tsx  SpectrumPage.view-model.ts  SpectrumPlaybackAction.tsx  SpectrumVisualizer.css  SpectrumVisualizer.test.ts  SpectrumVisualizer.tsx  arc_scroll.tsx  collectionTitle.ts  colorScheme.ts  coverTool.tsx  empty.tsx  labels.tsx  mediaPath.ts  (+30 more)
src/debug/: backActionTrace.ts  hardwareWheelTrace.ts  listConfigGhostTrace.test.ts  listConfigGhostTrace.ts  playbackTrace.ts  renderPerformanceTrace.test.ts  renderPerformanceTrace.ts  spectrumFrameTrace.ts  spectrumInitialRenderTrace.ts  (+14 more)
tests/: app_logic.test.ts  paste_download.test.ts
(+166 files in other folders)
