[package]
name = "Slisic"
version = "1.0.0"
description = "A compact music player built around smart shuffle and consistent listening experience."
authors = ["GrahLnn"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [
    "macos-private-api",
    "protocol-asset",
] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2"
tokio = { version = "1.43.0", features = ["process"] }
tracing = "0.1.41"
rspc = "0.4.1"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-os = "2"
surrealdb = { version = "2.2.1", features = ["kv-surrealkv"] }
anyhow = "1.0.95"
async-trait = "0.1.85"
once_cell = "1.20.2"
futures = "0.3.31"
thiserror = "2.0.11"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
inventory = "0.3.20"
windows = "0.61.3"
webview2-com = "0.38.0"
walkdir = "2.5.0"
sha2 = "0.10.9"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
    "stream",
] }
futures-util = "0.3.31"
hex = "0.4.3"
uuid = "1.18.0"
ebur128 = "0.1.10"
rayon = "1.11.0"
dashmap = "6.1.0"
fs2 = "0.4.3"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["clock"] }
async-runtime = "0.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
tar = "0.4.44"
xz2 = "0.1.7"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
