[package]
name = "Slisic"
version = "2.0.0"
description = "A Tauri App"
authors = ["GrahLnn"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.94.0"

[workspace]
members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "slisic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
test = false

[[example]]
name = "manual_download_chain"
test = false

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
specta = "2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-plugin-os = "2"
appdb = "0.2.23"
anyhow = "1.0.102"
async-trait = "0.1.89"
inventory = "0.3.24"
surrealdb = { version = "3.1.2", features = ["kv-surrealkv"] }
surrealdb-types = "3.1.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
windows = "0.62.2"
windows-sys = { version = "0.61.2", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.39.1"
tauri-plugin-process = "2"
ffplayr = { version = "0.1.4" }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
sha2 = "0.11.0"
hex = "0.4.3"
walkdir = "2.5.0"
zip = "8.6.0"
tar = "0.4.46"
xz2 = "0.1.7"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
rand = "0.10.1"
tauri = { version = "2.11.2", features = ["image-png", "macos-private-api", "protocol-asset"] }
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
tauri-plugin-fs = "2"
rustfft = "6.4.1"
toml = "1.1.2"
burn-tensor = { version = "0.21.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.21.0", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.21.0", default-features = false, features = ["std", "webgpu"] }
cubecl = { version = "0.10.0", default-features = false, features = ["std", "webgpu"] }
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3.32", features = ["sink"] }
base64 = "0.22.1"
rustls = { version = "0.23.41", features = ["aws_lc_rs"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
