[package]
name = "ffplayr"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
description = "FFmpeg-backed audio playback engine with async controls and optional loudness-aware gain planning."
license = "MIT"
documentation = "https://docs.rs/ffplayr"
homepage = "https://github.com/GrahLnn/ffplayr"
repository = "https://github.com/GrahLnn/ffplayr"
readme = "README.md"
keywords = ["audio", "ffmpeg", "playback", "rodio"]
categories = ["multimedia::audio"]
exclude = ["target", ".gitignore"]

[dependencies]
base64 = "0.22.1"
rodio = { version = "0.22.1", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "2.0.0-rc.23", features = ["derive"] }
tokio = { version = "1.50.0", features = ["sync"] }
